[build-system]
requires = ["hatchling <=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/LatticePy/__init__.py"

[project]
name = "LatticePy"
description = "A package for simulating biomolecules on a lattice."
authors = [{name = "Sohit Miglani", email = "sohitmiglani@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib<=3.9.2",
    "seaborn<=0.13.2",
    "pandas<=2.2.2",
    "numpy<=2.1.0",
    "plotly<=5.23.0",
    "networkx<=3.3"
]

[project.urls]
Source = "https://github.com/sohitmiglani/LatticePy"
Issues = "https://github.com/sohitmiglani/LatticePy/issues"